[gd_scene load_steps=2 format=3 uid="uid://caqbqwo5pnb1p"]

[ext_resource type="Script" path="res://UI/talk/talk.gd" id="1_2gfxf"]

[node name="talk" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2gfxf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -37.5
offset_right = 200.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="lblDialog" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="btnOp1" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="btnOp2" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
